--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/mocha": "^5.2.5",
         "@types/node": "^10.12.0",
         "chai": "^4.2.0",
+        "clean-webpack-plugin": "^1.0.1",
         "codecov": "^3.1.0",
         "cross-env": "^5.2.0",
         "istanbul": "^0.4.5",
